# educational-platform

./: README.md
services/exercise_compiler/: Cargo.toml
services/exercise_compiler/src/: main.rs
services/exercise_compiler/src/handlers/: compilers.rs
services/exercise_compiler/src/lib/: compilers.rs  mod.rs
services/exercise_compiler/src/tmp/: Tmp.java  tmp  tmp.cpp  tmp.go  tmp.hi  tmp.hs  tmp.js  tmp.py  tmp.rs
services/login-system/: Cargo.toml
services/login-system/src/: main.rs
