[package]
name = "exercise_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.8.1"
rand = "0.8.5"
actix-rt = "2.9.0"
uuid = {version = "1.6.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]}
