[package]
name = "login-system-bago"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.3.1"
anyhow = "1.0.79"
bcrypt = "0.15.0"
chrono = "0.4.31"
leptos = "0.5.4"
libsql-client = "0.30.1"
reqwest = "0.11.23"
serde = { version = "1.0.194", features = ["derive"] }
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.2"
shuttle-turso = "0.35.2"
tokio = "1.26.0"
url = "2.5.0"
